# container-infra

./: README.md  architecture.drawio  setup_dev_ubuntu.sh
cli/: pyproject.toml
instance/: Cargo.toml  README.md  makefs.sh
instance/src/: host.rs  init.rs  main.rs
instance/src/containers/: mod.rs  registry.rs  rt.rs
node/manager/: Cargo.toml
node/manager/src/: firecracker.rs  main.rs  networking.rs
node/nodeagent/: Cargo.toml  README.md  makefs.sh
node/nodeagent/src/: init.rs  main.rs
node/nodemanager/: Cargo.toml  README.md  config.json
node/nodemanager/src/: firecracker.rs  main.rs
node/useragent/: Cargo.toml  example.json  makefs.sh
node/useragent/src/: containers.rs  init.rs  main.rs  mmds.rs  sh.rs
node/useragent/src/containers/: fs.rs  mod.rs  registry.rs  rt.rs
nodeagent/: Cargo.toml  README.md  makefs.sh
nodeagent/src/: host.rs  init.rs  main.rs  mmds.rs  sh.rs
nodeagent/src/containers/: fs.rs  mod.rs  registry.rs  rt.rs
nodecli/: Cargo.toml  README.md  install.sh
nodecli/src/: main.rs
nodemanager/: Cargo.toml  README.md  config.json
nodemanager/src/: firecracker.rs  lib.rs  main.rs  manager.rs  networking.rs
nodemanager/src/machine/: firecracker.rs  log.rs  machine.rs  mod.rs  networking.rs  vsock.rs
proto/: Cargo.toml  build.rs
proto/pb/: node.proto
proto/src/: auth.rs  lib.rs
vm/: README.md
vm/src/: mmds.rs
vmproto/: Cargo.toml
vmproto/src/: guest.rs  host.rs  lib.rs
