[package]
name = "nodecli"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
proto = { path = "../proto"}
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
simple_logger = "5.0.0"
chrono = "0.4.41"
