[package]
name = "nodemanager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
ctrlc = "3.4.5"
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
http-client-unix-domain-socket = { version = "0.1.1" }
async-process = "2.3.0"
futures-lite = "2.6.0"
proto = { path = "../proto"}
tonic = "0.13.0"
tokio-stream = "0.1.17"
hmac = "0.12.1"
sha2 = "0.10.9"

