[package]
name = "nodeagent"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.1.0"
libc = "0.2.171"
log = "0.4.27"
oci-spec = "0.7.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"], default-features = false}
serde = "1.0.219"
simple_logger = "5.0.0"
tar = "0.4.44"
